# melt

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  melt.toml  readme.md
.github/workflows/: ci.yml
apps/landing/: next.config.ts  package-lock.json  vercel.json
apps/landing/src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/landing/src/app/404/: page.tsx
apps/landing/src/app/about/: page.tsx
apps/landing/src/app/api/contact/: route.ts
apps/landing/src/app/blog/: page.tsx
apps/landing/src/app/blog/[slug]/: page.tsx
apps/landing/src/app/contact-us/: layout.tsx  page.tsx
apps/landing/src/app/features/[slug]/: page.tsx
apps/landing/src/app/methodology/: page.tsx
apps/landing/src/app/privacy-policy/: page.tsx
apps/landing/src/app/terms-of-use/: page.tsx
apps/landing/src/components/: Clouds.tsx  FeatureIcons.tsx  FeaturePageLayout.tsx  LegalLayout.tsx  Logo.tsx  Mockups.tsx  Nav.tsx  UI.tsx
apps/landing/src/components/sections/: BlogTeasers.tsx  CTA.tsx  Community.tsx  Cost.tsx  CostCalculator.tsx  DeviceSync.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  Pricing.tsx  Routing.tsx  Simplicity.tsx  Strategies.tsx  Testimonials.tsx  TrustStrip.tsx
apps/landing/src/lib/: cloudflare-email.ts  faq.ts  features.ts  posts.ts  seo.ts  work-email.ts
crates/melt-audit/: Cargo.toml  readme.md
crates/melt-audit/src/: aggregate.rs  classify.rs  cli.rs  credit.rs  fixture.rs  grants.rs  lib.rs  main.rs  model.rs  output.rs  redact.rs  share.rs  snowflake.rs
crates/melt-audit/tests/: fixture.rs  share.rs
crates/melt-audit/tests/fixtures/: audit-share-redacted.json
crates/melt-cli/: Cargo.toml  readme.md
crates/melt-cli/src/: audit_cmd.rs  bootstrap_client.rs  bootstrap_server.rs  config.rs  debug_cmd.rs  main.rs  reload.rs  runtime.rs  runtime_init.rs  sessions_cmd.rs  shutdown.rs  sync_cmd.rs
crates/melt-control/: Cargo.toml
crates/melt-control/src/: catalog.rs  lib.rs  schema.rs  state.rs
crates/melt-core/: Cargo.toml
crates/melt-core/src/: backend.rs  config.rs  error.rs  hybrid.rs  lib.rs  policy.rs  reload.rs  route.rs  session.rs  stream.rs  sync.rs  table.rs
crates/melt-core/src/translate/: bind.rs  date.rs  functions.rs  hide_internal.rs  lateral_flatten.rs  mod.rs  qualify.rs  semi_structured.rs  strip_database.rs
crates/melt-ducklake/: Cargo.toml
crates/melt-ducklake/src/: catalog.rs  config.rs  lib.rs  local.rs  pool.rs  reader.rs  schema.rs
crates/melt-ducklake/src/sync/: apply.rs  kafka.rs  mod.rs  snowflake.rs
crates/melt-iceberg/: Cargo.toml
crates/melt-iceberg/src/: catalog.rs  config.rs  glue.rs  lib.rs  pool.rs  reader.rs  rest.rs
crates/melt-iceberg/src/sync/: mod.rs  snowflake.rs  writer.rs
crates/melt-metrics/: Cargo.toml
crates/melt-metrics/src/: http.rs  lib.rs  names.rs  registry.rs  spans.rs  tracing_init.rs
crates/melt-proxy/: Cargo.toml
crates/melt-proxy/src/: execution.rs  hybrid_cache.rs  hybrid_parity.rs  lib.rs  response.rs  result_store.rs  server.rs  session.rs  shutdown.rs  tls.rs
crates/melt-proxy/src/handlers/: ca.rs  mod.rs  partition.rs  session.rs  statement.rs  v1.rs
crates/melt-proxy/tests/: hybrid_e2e.rs  pool_saturation_e2e.rs  pool_timeout_e2e.rs  seed_mode.rs  statement_e2e.rs
crates/melt-router/: Cargo.toml
crates/melt-router/src/: classify.rs  decide.rs  enforce.rs  hints.rs  lib.rs  parse.rs  stats.rs  translate.rs
crates/melt-router/src/hybrid/: builder.rs  cost.rs  emit.rs  mod.rs  strategy.rs
crates/melt-router/tests/: bench_routes_fixture.rs  decide.rs  hybrid.rs  route_fixtures.rs  translate.rs
crates/melt-snowflake/: Cargo.toml
crates/melt-snowflake/src/: auth.rs  client.rs  config.rs  errors.rs  lib.rs  passthrough.rs  policy.rs  policy_dsl.rs  snowpipe.rs  statements.rs  stream.rs  views.rs
docker/: melt.docker.toml
docs/: SEED_MODE.md  architecture.md  configuration.md  overview.md
docs/guides/: dual-execution.md  issuing-queries.md  object-storage.md  policy-modes.md  quickstart-docker.md  quickstart-local.md  service-authentication.md  sync.md  tls.md
docs/internal/: KNOWN_ISSUES.md  README.md
examples/: README.md
examples/agent-cost-demo/: Makefile  agent_workload.toml  demo.py  readme.md
examples/audit/: generate-fixture.py  ground-truth.json  query-history-fixture.csv
examples/bench/: Makefile  README.md  requirements.txt  run_bench.py  workload.toml
examples/bench/fixtures/: melt.bench.toml  regen_routes.py  results-real.json  results-synthetic.json  routes.json
examples/python/: .env.example  README.md  hybrid_demo.py  melt_demo.py  requirements.txt  router_demo.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
scripts/: check-pr-policy.sh
scripts/bench-seed/: seed_bench.py
site/: .gitignore  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vercel.json
site/api/audit/: [id].ts  share.ts
site/lib/: rate-limit.ts  render.ts  short-id.ts  store.ts  types.ts  validate.ts
site/test/: _fixture.ts  handlers.test.ts  render.test.ts  validate.test.ts
