[workspace]
resolver = "2"
members = [
    "crates/melt-core",
    "crates/melt-metrics",
    "crates/melt-snowflake",
    "crates/melt-control",
    "crates/melt-ducklake",
    "crates/melt-iceberg",
    "crates/melt-router",
    "crates/melt-proxy",
    "crates/melt-cli",
    "crates/melt-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Melt Contributors"]
repository = "https://github.com/citguru/melt"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

# Errors / serde
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
humantime-serde = "1.1"
bytesize = { version = "1.3", features = ["serde"] }

# HTTP / network
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", features = ["trace", "decompression-gzip"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip"] }
hyper = "1.4"
http = "1.1"
bytes = "1.7"
rustls = "0.23"
rustls-pemfile = "2.1"

# Observability
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Data — pinned to match the version `duckdb` links internally (its
# bundled C++ build dictates the Rust arrow crates we must use here).
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
arrow-ipc = "58"
parquet = { version = "58", features = ["arrow", "async"] }

# DuckDB / Postgres
# Crate version 1.10502.x maps to DuckDB 1.5.2 (the maintainers
# switched to a packed `1.<minor*100+patch padded>.x` scheme starting
# with DuckDB 1.5).
duckdb = { version = "=1.10502", features = ["bundled"] }
deadpool = "0.12"
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }

# SQL parsing
sqlparser = { version = "0.52", features = ["visitor"] }

# Misc
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"

# Workspace internal
melt-core = { path = "crates/melt-core" }
melt-metrics = { path = "crates/melt-metrics" }
melt-snowflake = { path = "crates/melt-snowflake" }
melt-control = { path = "crates/melt-control" }
melt-ducklake = { path = "crates/melt-ducklake" }
melt-iceberg = { path = "crates/melt-iceberg" }
melt-router = { path = "crates/melt-router" }
melt-proxy = { path = "crates/melt-proxy" }
melt-audit = { path = "crates/melt-audit" }

arc-swap = "1.7"
globset = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
