[package]
name = "melt-audit"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "melt_audit"
path = "src/lib.rs"

[[bin]]
name = "melt-audit"
path = "src/main.rs"

[dependencies]
melt-core = { workspace = true }
melt-router = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlparser = { workspace = true }
