[package]
name = "melt-control"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
melt-core = { workspace = true }
melt-snowflake = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
