[package]
name = "melt-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
humantime-serde = { workspace = true }
bytesize = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
