[package]
name = "melt-ducklake"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["read"]
read = []
write = []
kafka = ["dep:rdkafka", "write"]
full = ["read", "write"]

[dependencies]
melt-core = { workspace = true }
melt-snowflake = { workspace = true }
melt-control = { workspace = true }
melt-metrics = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
arrow = { workspace = true }
duckdb = { workspace = true }
deadpool = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tokio-stream = "0.1"
uuid = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
rdkafka = { version = "0.36", default-features = false, features = ["tokio", "cmake-build"], optional = true }

[dev-dependencies]
toml = { workspace = true }
