[package]
name = "melt-iceberg"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["read"]
read = []
write = []
full = ["read", "write"]

[dependencies]
melt-core = { workspace = true }
melt-snowflake = { workspace = true }
melt-control = { workspace = true }
melt-metrics = { workspace = true }
metrics = { workspace = true }
aws-config = { version = "1.5", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-glue = { version = "1.55", default-features = false, features = ["rustls", "rt-tokio"] }
# Parquet encoding, S3 PUT, and manifest-JSON crafting used to live
# in this crate. All three are now owned by duckdb-iceberg — the
# writer is plain `INSERT INTO ice.t` via DuckDB.
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
duckdb = { workspace = true }
deadpool = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
