[package]
name = "melt-metrics"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
melt-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
