[package]
name = "melt-proxy"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
melt-core = { workspace = true }
melt-metrics = { workspace = true }
melt-snowflake = { workspace = true }
melt-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
# Used by `tests/pool_saturation_e2e.rs` to exercise the same
# `deadpool::Pool::timeout_get` primitive `DuckLakePool::read` /
# `IcebergPool::read` use under reader-pool saturation. See KI-001
# mitigation #2 in `docs/internal/KNOWN_ISSUES.md` (POWA-164).
deadpool = { workspace = true }

# `tests/seed_mode.rs` (POWA-92 / KI-002) generates a TPC-H sf=0.01
# fixture in a tempdir and drives the credential-free demo path. The
# duckdb extension loader segfaults when two tests `INSTALL tpch`
# concurrently from the same target — `serial_test` forces those tests
# onto a process-global mutex so the rest of the suite still runs in
# parallel.
melt-ducklake = { workspace = true }
duckdb = { workspace = true }
tempfile = "3"
anyhow = { workspace = true }
serial_test = "3"
